--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '~/layouts/PageLayout.astro';
-import { SignIn } from '~/components';
+import { SignIn } from '../../components';
 const metadata = { title: 'Login' };
 ---
 
