--- a/src/pages/logout.astro
+++ b/src/pages/logout.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '~/layouts/PageLayout.astro';
-import { SignOut } from '~/components';
+import { SignOut } from '../../components';
 const metadata = { title: 'Logout' };
 ---
 
