--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '~/layouts/PageLayout.astro';
-import Header from '~/components/widgets/header.astro';
-import Footer from '~/components/widgets/footer.astro';
+import Header from '../../components/widgets/header.astro';
+import Footer from '../../components/widgets/footer.astro';
 
 const metadata = {
   title: 'A — Coming Soon',
