--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -2,7 +2,7 @@
 import Layout from '~/layouts/Layout.astro';
 import Header from '~/components/widgets/header.astro';
 import Footer from '~/components/widgets/footer.astro';
-import { headerData, footerData } from '~/navigation';
+import { headerData, footerData } from '../navigation';
 import type { MetaData } from '~/types';
 
 export interface Props {
