--- a/src/components/common/Logo.astro
+++ b/src/components/common/Logo.astro
@@ -1,6 +1,6 @@
 ---
 const logoSrc = '/src/assets/images/logo.png'; // Make sure the file is placed here
-const logoAlt = 'A Logo';
+const logoAlt = 'CBB Logo';
 ---
 
 <a href="/" aria-label="Homepage" class="inline-flex items-center">
