--- a/src/components/Auth.astro
+++ b/src/components/Auth.astro
@@ -1,7 +1,7 @@
 ---
 import { getSession } from '../../server'
 import { type FullAuthConfig } from '../config'
-import authDefaultConfig from 'auth:config'
+import authDefaultConfig from '../config/auth.config'
 
 interface Props {
 	authConfig?: FullAuthConfig
